# Goodreads

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  manage.py  requirements.txt  setup.cfg
Goodreads/: asgi.py  schema.py  settings.py  urls.py  views.py  wsgi.py
Goodreads/gql/version/: queries.py  types.py
Goodreads/managment/commands/: clear_all_caches.py
apps/account/: admin.py  apps.py  choices.py  managers.py  models.py  query_sets.py  signals.py  validators.py
apps/account/gql/: schema.py
apps/account/gql/authentication/: mutations.py  types.py
apps/account/gql/author/: mutations.py  queries.py  types.py
apps/account/gql/relation/: mutations.py  queries.py  types.py
apps/account/gql/user/: enums.py  mutations.py  queries.py  types.py
apps/book/: admin.py  apps.py  managers.py  models.py  query_sets.py  validators.py
apps/book/fixtures/: initial_tags.json
apps/book/gql/: schema.py
apps/book/gql/book/: mutations.py  queries.py  types.py
apps/book/gql/shelf/: enums.py  mutations.py  queries.py  types.py
apps/book/gql/tag/: enums.py  queries.py  types.py
apps/extension/: admin.py  apps.py  models.py
helpers/cache/: decorators.py
helpers/generic_types/: __init__.py
helpers/ratelimit/: __init__.py
helpers/temp_generator/: __init__.py
setup/: version_punch.py
tests/load/: README.md  locustfile.py
