[bumpversion]
current_version = 1.0.2
build_number = ef899dc5
commit = False
tag = False

[metadata]
name = goodreads
author = Alireza Khabbazan
description = A simplified version of Goodreads using django graphql.
url = https://github.com/khabbazan
keywords = django, graphql, graphene

[options]
python_requires = >=3.10, <4
install_requires =
	django
	graphene

[bumpversion:file:version.txt]

[bumpversion:file:Goodreads/settings.py]

[flake8]
ignore = E266, N805, VNE003, A001, A003
exclude = .git,__pycache__
max-line-length = 170
